--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-thesis/main.aux
 thesis/items/1_intro.tex
 thesis/main.docx
 thesis/main.fdb_latexmk
@@ -7,5 +6,4 @@ thesis/main.log
 thesis/main.out
 thesis/main.synctex.gz
 thesis/main.toc
-thesis/items/1_intro.aux
-thesis/items/4_concl.aux
+*.aux
